<resources>
    <string name="app_name">Marvel</string>
    <string name="detalhe_name">Detalhes</string>
    <string name="informacoes_name">Marvel Studios</string>
    <string name="text_home">Olá addNomeDoUsuarioLogado esses são alguns dos personagens da Marvel</string>
    <string name="lista_nome_heroi">Nome do heroi</string>
    <string name="texto_detalhe_descricao">Rogue é uma mutante Nível Ômega, personagem de histórias em quadrinhos da editora Marvel Comics. Vampira é integrante de algumas equipes dos X-Men e dos Vingadores</string>
    <string name="texto_informacoes_marvel">Informações sobre a Marvel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filmes_texto">AQUI PODERIA TER UM RECYCLERVIEW COM ALGUNS FILMES DA MARVEL!</string>
    <string name="hqs_texto">AQUI PODERIA TER UM RECYCLERVIEW COM ALGUNS HQS DA MARVEL!</string>
    <string name="description_image_splash">Imagem com os personagens da Marvel</string>
    <string name="password">Senha</string>
    <string name="sign_in">sign_in</string>
    <string name="login">Email</string>
    <string name="new_register">Crie sua conta agora</string>
    <string name="action_sign_in">Login</string>
    <string name="register_name">Nome</string>
    <string name="register_email">Email</string>
    <string name="register_password">Senha</string>
    <string name="register_cont">Registrar Conta</string>
    <string name="exit">Sair</string>
    <string name="welcome_messages">Olá, %1$s! Esses são alguns dos personagens da Marvel.</string>
</resources>