<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_16"
    android:paddingTop="@dimen/padding_16"
    android:paddingRight="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_16"
    tools:context=".presentation.register.activityview.RegisterActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_nameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/margin_top_32"
        android:hint="@string/register_name"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@id/edit_emailRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="@id/edit_nameRegister"
        app:layout_constraintRight_toRightOf="@id/edit_nameRegister"
        app:layout_constraintTop_toBottomOf="@id/edit_nameRegister" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:errorEnabled="true"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="@id/edit_emailRegister"
        app:layout_constraintRight_toRightOf="@id/edit_emailRegister"
        app:layout_constraintTop_toBottomOf="@id/edit_emailRegister" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_top_32"
        android:background="@color/red_700"
        android:text="@string/register_cont"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/edit_passwordRegister"
        app:layout_constraintRight_toRightOf="@id/edit_nameRegister"
        app:layout_constraintTop_toBottomOf="@id/edit_passwordRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>